Fix to overlapping serial numbers CSS.

--- a/More/Logfile Analyzer.css
+++ b/More/Logfile Analyzer.css
@@ -108,7 +108,7 @@ body {
                 font-size: 44px;
                 font-weight: bold;
             }
-            #wrap > #bombs > .bomb > .serial:nth-child(2) {
+            #wrap > #bombs > .bomb > .serial:not(:first-child) {
                 left: 47px;
                 top: 9px;
             }
